--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,24 @@ amplifyconfiguration.json
 credentials-mc.json
 
 fastlane/report.xml
+
+# Amplify artifacts, such as used for integ tests
+amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+amplify/backend/.temp
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
